ART 4.11
* Added showColumnFilters option for htmlDataTable report format

ART 4.10
* Allow use of grouping in jxls templates
* Fix for incorrect file name on download
* Fix for open password not working for xlsx files
* Allow for HikariCP configuration
* Added jdbc driver for Elasticsearch

ART 4.9
* Added jdbc driver for JSON files
* Added jdbc driver for MongoDB
* Updated morphia. Will require change of package names in report source and groovy-whitelist.txt from org.mongodb.morphia... to dev.morphia...
* Updated mongo java driver

ART 4.8
* Fix for error while upgrading jobs
* Have exact matching for report groups filter in reports page
* Added refreshPeriodSeconds option for reports to allow auto refresh of reports

ART 4.7
* Fix for error with oracle upgrade

ART 4.6
* Corrected run of auto-refresh reports when dashboard parameters are changed
* Better handling of labels being cut-off with vertical bar 2D charts
* Removed couchbase jdbc driver
* Updated jsoup

ART 4.5
* Enable use of windows domain authentication with SMB2

ART 4.4
* Allow chained parameters to use default values
* Fix for large c3.js chart width in tabbed dashboard
* Fix for gridstack dashboard not showing properly inline in chrome
* Updated jackson, jongo

ART 4.3
* Added file and fileZip report formats for FreeMarker, Velocity and Thymeleaf report types
* Removed pdf export by default for htmlDataTable report format
* Enable use of oauth with gmail smtp server
* Allow use of clear text password when loading the art-database.json file
* Log job runs to the art_logs table
* Renamed query_id column in art_logs table to item_id
* Added a REST endpoint for reports
* Added showErrorsApi custom setting
* Added allowRepositoryLogin custom setting
* Updated poi, jxls, jasperreports, xdocreports

ART 4.2
* Added use_api permission
* Better handle dates for MongoDB reports
* Effect show header in public user session setting
* Added Russian translation (thanks to Galina Seliverstova and Pavel Alexeev)